--- a/02-resources.Rmd
+++ b/02-resources.Rmd
@@ -1,10 +1,37 @@
-# Learning Resources
+# Citations & Learning Resources
 
-##  Introduction
+## Overview: Multilevel and Marginal Models
+
+
+
+### John Nezlek
+
+John Nezlek is currently a professor at SWPS University of Social Sciences and Humanities in Poznań Poland and the Department of Psychological Sciences, College of William and Mary (Emeritus). He divides his time between Poland and the US. John does research in Personality Psychology, Psychometrics, and Social Psychology. Much of his research concerns daily experience. He recently received a grant to study vegetarianism as a social identity
+
+
+Nezlek, J. B. (2012). Multilevel modeling for psychologists. In H. Cooper, P. M. Camic, D. L. Long, A. T. Panter, D. Rindskopf, & K. J. Sher (Eds.), APA handbook of research methods in psychology, Vol. 3. Data analysis and research publication (pp. 219–241). American Psychological Association. [DOI: 10.1037/13621-011](https://doi.org/10.1037/13621-011)
+
+
+
+
+* [Full PDF online](https://jbnezl.people.wm.edu/Reprints/2012-APA-Handbook-MLM.pdf)
+
+
+
+## MLM: Multilevel Modeling *or* Mixed Effects Regression
+
+
+## GLMM: Generalized Linear Multilevel Models *or* Generalized Mixed Effects Regression
+
+
+
+## GEE: Generalized Estimating Equations
+
+
+
+
+
 
 
 ```{block type='rmdlink', echo=TRUE}
-"Multilevel Modeling for Psychologists" (chapter 11) by John B. Nezlek  
-
-* [Full PDF online](https://jbnezl.people.wm.edu/Reprints/2012-APA-Handbook-MLM.pdf)
 ```
