--- a/04-articles.Rmd
+++ b/04-articles.Rmd
@@ -2,6 +2,51 @@
 
 ## Cross-sectional: clustered or hierarchical
 
+### Observed, cross-classified Clusters
+
+
+```{block type='rmdlink', echo=TRUE}
+**Disentangling the Relative Influence of Schools and Neighborhoods on Adolescents’ Risk for Depressive Symptoms**
+
+- [Public link](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4358201/)
+- [USU-full text](https://ajph.aphapublications.org/doi/full/10.2105/AJPH.2014.302374)
+
+```
+
+Dunn, E. C., Milliren, C. E., Evans, C. R., Subramanian, S. V., & Richmond, T. K. (2015). Disentangling the relative influence of schools and neighborhoods on adolescents’ risk for depressive symptoms. American journal of public health, 105(4), 732-740.
+
+> "Our data came from wave 1 of the National Longitudinal Study of Adolescent Health (Add Health), one of the few nationally representative longitudinal surveys of US adolescents that examines health and health-related behaviors and includes information about both school and neighborhood environments."
+
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Concept        | Article Details                                                                                                                                           |
++:===============+:==========================================================================================================================================================+
+| **Terms**      | cross-classified multilevel modeling (CCMM)                                                                                                              |
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Samples**    | -   Level 2a: schools (*n* = 128)  |
+|                | -   Level 2b: neighborhoos (*n* = 2,118)                                                                                                                |
+|                | -   Level 1: students (*n* = 16,172)                                                                                                                        |+----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Missing**    | excluded: not nationally representative and schools that did not provide demographic data had been eliminated (n = 660)                                  |
+|                |           adolescents who were missing data on the outcome measure (n = 38) or predictors and covariates (n = 1404)                                      |
+|                |           We restricted our analysis to adolescents who were White, Black, or Hispanic (others too sparce)                                               |
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Centering**  | none noted                                                                                                                                                |
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Components** | descriptives, MLM, ICC                                                                       |
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Results**    | plots of cluster means (by school and by neighborhood), table of parameter estimates |
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+| **Software**   | **MLwiN version 2.26**  with Bayesian estimation procedures, implemented via Markov chain Monte Carlo methodology                               |
++----------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------+
+
+* disentangle the effects of schools and neighborhoods on adolescents’ risk for depression
+* schools appeared to drive the between-level variance in depressive symptoms more than neighborhoods
+* After individual-level (or compositional) characteristics had been taken into account, the school-level random effect was statistically significant and more than 3 times the neighborhood-level random effect
+* we found that only student-level factors (i.e., gender, race/ethnicity, age, parental SES) were significantly associated with depressive symptoms
+
+
+
+
+
 ### Non-randomized Intervention
 
 ```{block type='rmdlink', echo=TRUE}
