--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Encyclopedia of Quantitative Methods in R, vol. 5: Multilevel Models"
-author: "Sarah Schwartz, PhD"
+author: "Author: Sarah Schwartz, PhD"
 date: "Last updated: `r Sys.Date()`"
 documentclass: book
 description: "Mulilevel & Marginal Modeling: ICCs, MLM/HLM, and GEEs."
@@ -17,56 +17,22 @@ link-citations: yes
 ---
 
 
-# Welcome {-}
-
-Backgroup and links to other volumes of this encyclopedia may be found at the [Encyclopedia's Home Website](https://cehs-research.github.io/eBooks/).
-
-
 
 ![](images/common/EQM_v5_header.png)
 
 
+[Encyclopedia's Home Website](https://cehs-research.github.io/eBooks/).
+
+
+![](images/common/Sarah_headshot.jpg)
+
+Website: www.SarahSchwartzStats.com](http://www.sarahschwartzstats.com/)
+eMail: Sarah.Schwartz@usu.edu
 
 
 
-```{r, echo=FALSE, include=FALSE, comment=FALSE, message=FALSE}
-library(tidyverse, quietly = TRUE)
-library(kableExtra)
-```
 
 
-
-## Blocked Notes {-}
-
-Thoughout all the eBooks in this encyclopedia, several small sections will be blocked out in the following ways:
-
-```{block type='rmdconstruct', echo=TRUE}
-These blocks denote an area **UNDER CONSTRUCTION**, so check back often.  This massive undertaking started during the summer of 2018 and is far from complete.  The outline of seven volumes is given above despite any one being complete.  Feedback is welcome via either author's email.
-```
-
-
-```{block type='rmdimportant', echo=TRUE}
-These blocks denote something **EXTREMELY IMPORTANT**.  Do NOT skip these notes as they will be used very sparingly.
-```
-
-
-```{block type='rmddownload', echo=TRUE}
-These blocks denote something to **DOWNLOAD**.  This may include software installations, example datasets, or notebook code files.
-```
-
-```{block type='rmdcitation', echo=TRUE}
-These blocks denote a **CITATION**.  These should be use for writting manuscripts.
-```
-
-```{block type='rmdlightbulb', echo=TRUE}
-These blocks denote something **INTERESTING**.  These point out information we found of interest or added value.
-```
-
-
-
-```{block type='rmdlink', echo=TRUE}
-These blocks denote **LINKS** to other websites.  This may include instructional video clips, articles, or blog posts.  We are all about NOT re-creating the wheel.  If somebody else has described or illustrated a topic well, we celebrate it!
-```
 
 
 ## Code and Output {-}
@@ -85,23 +51,6 @@ This is what the output of the $R$ code above will look:
 ```
 
 
-## The Authors {-}
-
-
-```{r, echo=FALSE}
-tribble( ~Sarah, 
-      "![](images/common/Sarah_headshot.jpg){width=300px}",
-      "[www.SarahSchwartzStats.com](http://www.sarahschwartzstats.com/) ",
-      "Sarah.Schwartz@usu.edu",
-      "[Statistical Consulting Studio](https://cehs.usu.edu/research/statstudio/index)",
-      "![](images/common/StatStudioLogo_dark_small.png){width=300px}") %>% 
-  data.frame() %>%
-  kableExtra::kable(col.names = c("Dr. Sarah Schwartz"),
-                    align = "c") %>% 
-  kableExtra::row_spec(row = 0,
-                       font_size = 20)
-```
-
 
 
 ### Why choose R ?  {-}
@@ -118,6 +67,9 @@ tribble( ~Sarah,
 This entire encyclopedia is written in $R Markdown$, using $R Studio$ as the text editor and the `bookdown` package to turn a collection of markdown documents into a coherent whole. The book's source code is hosted on GitHub. If you notice typos or other issues, feel free to email author.
 
 This work is licensed under the [Attribution-NonCommercial-NoDerivatives 4.0 International](https://creativecommons.org/licenses/by-nc-nd/4.0/legalcode) License. 
+
+
+
 
 
 
